# RC-autonomous-car

./: .gitignore  Doxyfile  Notes.rtf  README  README.md  README.txt  build.gradle  contributors.txt  settings.gradle
Doc/html/: _common_functions_8h_source.html  _d_u_o3_d__camera_8h_source.html  _d_u_o_lib_8h_source.html  _globals_8h_source.html  _movement_8h_source.html  _obstacle_scenario_8h_source.html  _odometry_8h_source.html  _path_planer_8h_source.html  _simulator_8h_source.html  _stereo_cam_8h_source.html  _stereo_data_8h_source.html  _stereo_pair_8h_source.html  annotated.html  arduino-serial-lib_8h_source.html  class_movement-members.html  class_movement.html  class_obstacle_scenario-members.html  class_obstacle_scenario.html  class_odometry-members.html  class_odometry.html  class_path_planer-members.html  class_path_planer.html  class_simulator-members.html  class_simulator.html  class_simulator__coll__graph.dot  class_simulator__coll__graph.md5  class_stereo_cam-members.html  class_stereo_cam.html  class_stereo_data-members.html  class_stereo_data.html  class_stereo_pair-members.html  class_stereo_pair.html  class_stereo_pair__coll__graph.dot  class_stereo_pair__coll__graph.md5  classes.html  dir_066fa757341646f5a2e83da4d957565f.html  dir_11573b7ab28154af7706cb099b166aee.html  dir_143372cf9c2f97e18b13d1db4052f766.html  dir_1ae0c5d3cbae65a74d41b451bd498861.html  dir_20c6ff983ccac0b4543322801fe38dd6.html  (+44 more)
Doc/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  functions_0.js  functions_1.js  searchdata.js
Doc/latex/: annotated.tex  class_movement.tex  class_obstacle_scenario.tex  class_odometry.tex  class_path_planer.tex  class_simulator.tex  class_simulator.tex.tmp  class_simulator__coll__graph.dot  class_simulator__coll__graph.md5  class_stereo_cam.tex  class_stereo_data.tex  class_stereo_pair.tex  class_stereo_pair__coll__graph.dot  class_stereo_pair__coll__graph.md5  dir_066fa757341646f5a2e83da4d957565f.tex  dir_11573b7ab28154af7706cb099b166aee.tex  dir_143372cf9c2f97e18b13d1db4052f766.tex  dir_1ae0c5d3cbae65a74d41b451bd498861.tex  dir_20c6ff983ccac0b4543322801fe38dd6.tex  dir_31c12036d3124c5df46c770edb17e631.tex  dir_6724531dd9ff5f56b6aec91620184b70.tex  dir_71ad501769781d1b296bc749f1aa5a53.tex  dir_8c3f2e262201f49b4cfce9627e7870ac.tex  dir_9ab43df45fefe259a119e6a047765891.tex  dir_9cf7c81a15604bf3acfe53c26f4a6a0d.tex  dir_ae2f10fc2bef22672700bd71a84597a6.tex  dir_b6ddb2f0d3d29f46f6dea88885413e64.tex  dir_bb3a5414d0847f4ad391b50154b62300.tex  dir_bc71da6ad623dcf625cd78958a09f159.tex  dir_dea855bb579a3b3ec9aa1a0a2b833c4d.tex  dir_e0aae3f280cf38e084309e5e116125b9.tex  dir_e5c29435e40735615ac3e0beed390043.tex  dir_eb0babbcea130f3d9504688742e4f78c.tex  dir_edb81b8013d3aae14184e2d4670141f8.tex  dir_eea9485a2977ff7c12d1ebb7ae6c7278.tex  dir_f45bc6d282a1ded0e61a01a7554151a5.tex  dir_fa3fcb0f5e012d0c46a62a30d7655491.tex  dir_fbdf6350013b2b6c375f16018cf7d90b.tex  dir_fe318414bb03acfbf624e6fe595ba24c.tex  refman.tex  (+9 more)
data/: stereo_calibration_parameters.xml
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt  CommonMethods.h  DUO3D_camera.h  Globals.h  ImgData.cpp  ImgData.h  ObstacleScenario.cpp  ObstacleScenario.h  Odometry.cpp  Odometry.h  PathPlaner.cpp  PathPlaner.h  Simulator.cpp  Simulator.h  StereoPair.cpp  StereoPair.h  arduino_serial_lib.c  cv_1.cpp  main.cpp
src/AppData/: semiglobal_block_match_parameters.xml  stereo_calibration_parameters.xml
src/Arduino code/Serial test tool (command line)/: Makefile  arduino-serial
src/Arduino code/Serial_communication_test/: Serial_communication_test.ino
src/Arduino code/car_controller/: Movement.cpp  Movement.h  car_controller.ino  car_controller.ino alias
src/DUO3D_SDK/osx/x64/: libduo.dylib
src/DUO3D_SDK/windows/msvc2010/x64/: DUOLib.lib
src/DUO3D_SDK/windows/msvc2010/x86/: DUOLib.lib
src/DUO3D_SDK/windows/msvc2012/x64/: DUOLib.lib
src/DUO3D_SDK/windows/msvc2012/x86/: DUOLib.lib
